fix: CWU-52 search buton alignment

--- a/src/static/assets/scss/organisms/_form.scss
+++ b/src/static/assets/scss/organisms/_form.scss
@@ -139,13 +139,13 @@ $form: '.form';
 
 	.search-button {
 		background: $black;
-		bottom: 3px;
+		bottom: 2px;
 		color: currentcolor;
 		cursor: pointer;
 		font-size: 24px;
 		position: absolute;
-		right: 3px;
-		top: 3px;
+		right: 2px;
+		top: 2px;
 		width: 62px;
 
 		svg {
